restructure hybrid agent